started string interning